# lawchecker

./: .env.example  .gitignore  .gitmodules  API_html_diff.html  CHANGELOG.md  Examples.md  LICENCE  LawChecker.spec  Pension_Schemes_Bill.html  README.md  build-macos.py  compare_report_template.html  create_exe.bat  eslint.config.js  examples.md  index.html  notebook.ipynb  package.json  pyproject.toml  renumbered.py  requirements.txt  sharepoint-rest-urls.txt  vite.config.ts
HTML/: 2021-11-30_added-names-inter-output.html  2021-12-01_added-names-inter-output.html  2021-12-01_added-names.html  2021-12-02_added-names-inter-output.html  2021-12-02_added-names.html  2021-12-03_added-names.html  2021-12-06_added-names-inter-output.html  2021-12-06_added-names.html
LM_XML/: digital_rm_rep_0721.xml  digital_rm_rep_0825.xml  digital_rm_rep_0906.xml  digitalmarkets_rm_pbc_0705.xml  digitalmarkets_rm_pbc_0706.xml  energy_rm_rep_0904.xml
XML/: 2021-11-19_added-names.xml  2021-11-22_added-names.xml  2021-11-29_added-names.xml  2021-11-30_added-names-inter-output.xml  2021-11-30_added-names.xml  2021-12-01_added-names-inter-output.xml  2021-12-01_added-names.xml  2021-12-02_added-names-inter-output.xml  2021-12-02_added-names.xml  2021-12-03_added-names-inter-output.xml  2021-12-03_added-names.xml  2021-12-06_added-names-inter-output.xml  2021-12-06_added-names.xml  2021-12-07_added-names-inter-output.xml  2021-12-07_added-names.xml  intermidiate-from-python.xml  mnis-data-2021-12-07.xml
XML/FrameMakerXML/: natbord_rm_rep_1201.xml  natbord_rm_rep_1203.xml
XML/LawmakerXML/: illegal_migration_day_rm_0426.xml
XSLT/: added-names-spo-rest.py  added-names-spo-rest.xsl  post-processing-html-marsh-test.xsl  post-processing-html.py  post-processing-html.xsl  post_processing_test.py  post_processing_test_HTML.py  template.html
_Reports/2023-05-15/: Added_Names_Report.html
_Reports/2023-05-17/: Added_Names_Report.html
_Reports/2023-06-08__16-53/: Added_Names_Report.html
_Reports/2023-09-19/: Compare_Report.html
_Reports/2023-09-20/: Compare_Report.html
additional_runtime_hooks_lawchecker/: hook-lawchecker.py
example_files/: Data Protection and Digital Information Bill - commons committee.xml
example_files/amendments/: datapro_rm_rep_0721.xml  datapro_rm_rep_0825.xml  econactivity_rm_rep_0918.xml  econactivity_rm_rep_0919.xml  energy_day_rep_0905.xml  energy_rm_rep_0904.xml  victims_prisoners_rm_rep_0906.xml  victims_prisoners_rm_rep_0908.xml
icon/: LawChecker_App_Icons.ai  icon.icns
js/: ui.js
python/: check_amendments.py  html_diff_template.html  notebook.ipynb  output-from-python.html  run_xslts.py  templates.py
src/: .gitignore  compare_bill_numbering.py  index.html  main.tsx  package.json  tsconfig.app.json  vite.config.ts
src/js/: ui.js
supcheck/: logger.py  stars.py
tests/: compare_amendment_documents_test.py  data_for_testing.py
ui_bundle/: index.html
(+86 files in other folders)
