[project]
name = "lawchecker"
version = "2.0.0"
license = { file = "LICENCE" }
dependencies = [
    "lxml",
    "pyside6-essentials",
    "saxonche",
    "click",
    "pandas",
    "python-dateutil",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pyinstaller", "types-lxml"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# these are entry points for the command line
[project.scripts]
an_report = "lawchecker.added_names_report:main"
compare_report = "lawchecker.compare_amendment_documents:main"
startgui = "lawchecker.gui:main"
compare_bills = "lawchecker.compare_bill_documents:main"
bill_numbering = "lawchecker.compare_bill_numbering:cli"

[tool.isort]
profile = "black"
force_to_top = ["lawchecker.lawchecker_logger"]
