[project]
name = "lawchecker"
version = "2.0.0"
license = { file = "LICENCE" }
dependencies = [
    "lxml",
    "requests",
    "pywebview",
    "python-dotenv",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "types-lxml",
    "pyinstaller;sys_platform!='darwin'",
    "py2app;sys_platform=='darwin'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# these are entry points for the command line
[project.scripts]
an_report = "lawchecker.added_names_report:main"
compare_report = "lawchecker.compare_amendment_documents:main"
startgui = "lawchecker.main:main"
compare_bills = "lawchecker.compare_bill_documents:main"
bill_numbering = "lawchecker.compare_bill_numbering:cli"

[tool.isort]
profile = "black"
