[project]
name = "lawchecker"
license = "MIT"
dependencies = [
    "lxml",
    "requests",
    "python-dotenv",
]
requires-python = ">=3.11"
keywords = [
    "pywebview",
    "react",
    "python",
    "javascript",
    "parliament",
    "law",
    "bills",
    "amendments",
    "legislation"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "types-lxml",
    "pyinstaller;sys_platform!='darwin'",
    "py2app;sys_platform=='darwin'",
]
gui = [
    "pywebview",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# these are entry points for the command line
[project.scripts]
an_report = "lawchecker.added_names_report:main"
compare_report = "lawchecker.compare_amendment_documents:main"
gui = "lawchecker.main:main"
compare_bills = "lawchecker.compare_bill_documents:main"
bill_numbering = "lawchecker.compare_bill_numbering:cli"
web_amendments = "lawchecker.check_web_amdts:main"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "W", "B"]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.dynamic]
version = {attr = "lawchecker.__version__"}
